Resolves #2: Dark Mode

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,12 +2,88 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* This file is for your main application CSS */
+:root {
+  --background-color: white;
+  --text-color: black;
+  --border-color: #cccccc;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 46px;
+  height: 24px;
+  background-color: #b0c4de;
+  bottom: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.4s;
+}
+
+.switch::before {
+  content: "";
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  transition: transform 0.4s;
+}
+
+.switch.checked {
+  background-color: #4682b4; 
+  }
+
+.switch.checked::before {
+  transform: translateX(26px);
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+[data-theme="dark"] {
+  --background-color: #2c2c2c;
+  --text-color: #f5f5f5;
+  --border-color: #333333;
+}
+
+[data-theme="dark"] #chat-container {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+[data-theme="dark"] #box-messages,
+[data-theme="dark"] #chat-messages,
+[data-theme="dark"] #user-list {
+  background-color: #3a3a3a;
+  color: var(--text-color);
+}
+
+[data-theme="light"] {
+  --background-color: #ffffff;
+  --text-color: #000000;
+}
+
+[data-theme="light"] #chat-container {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+[data-theme="light"] #box-messages,
+[data-theme="light"] #chat-messages,
+[data-theme="light"] #user-list {
+  background-color: #f5f5f5;
+  color: var(--text-color);
+}
 
 #chat-container {
   display: flex;
   flex-direction: column;
-  border: 1px solid #cccccc;
+  border: 1px solid var(--border-color);
   padding: 1em;
   margin: -1em 1 1em -1em;
   height: 500px;
@@ -27,11 +103,10 @@
 
 #user-list {
   width: 200px;
-  border-left: 1px solid #cccccc;
+  border-left: 1px solid var(--border-color);
   padding-left: 1em;
   overflow-y: auto;
 }
-
 
 .color-1 { color: #8B4513; }
 .color-2 { color: #2F4F4F; }
@@ -64,5 +139,3 @@
 .color-29 { color: #708090; }
 .color-30 { color: #008080; }
 .color-default { color: gray; }
-
-
